# daily_reading_articles

./: README.md  helpers.ipynb  jim_donovan_journals.py  main.py  pyproject.toml  requirements.txt  run_jim_donovan.bat
database/: article.db
