[project]
name = "jim-donovan-daily-reading-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.33.0",
    "ipykernel>=7.1.0",
    "langchain-groq>=1.0.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
